--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,24 @@ compileTestKotlin {
 }
 
 tasks.withType(Test) {
+    outputs.upToDateWhen { false }
+
     useJUnitPlatform {
         includeEngines 'spek2'
     }
 
     testLogging {
-        events "failed", "skipped", "standard_error"
+        events "passed", "skipped", "failed", "standardOut", "standardError"
 
         showExceptions true
         showStackTraces true
         showCauses true
+        exceptionFormat "full"
+    }
+
+    afterSuite { desc, result ->
+        if (!desc.parent) { // will match the outermost suite
+            println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
+        }
     }
 }
