--- a/build.gradle
+++ b/build.gradle
@@ -51,3 +51,8 @@ tasks.withType(Test) {
         }
     }
 }
+
+jar {
+    manifest { attributes 'Main-Class': 'com.starter.AppKt' }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
