--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
     testCompile 'org.spekframework.spek2:spek-dsl-metadata:2.0.9'
     testCompile 'org.spekframework.spek2:spek-runner-junit5:2.0.9'
     testCompile 'com.natpryce:hamkrest:1.7.0.3'
-
+    testCompile 'io.mockk:mockk:1.9.3'
+    testCompile 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
 }
 
 compileKotlin {
